--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -24,5 +24,5 @@ python:
   install:
     - requirements: docs/requirements.txt
     - requirements: requirements.txt
-    - method: setuptools
+    - method: pip
       path: .
